--- a/sass/main.sass
+++ b/sass/main.sass
@@ -877,7 +877,6 @@ h3
 
 	&__title
 		font-family: $titleFont
-		// font-size: 50px
 		text-transform: uppercase
 		line-height: 1.4
 		margin-bottom: 60px
@@ -885,6 +884,7 @@ h3
 		+r(1200)
 			text-align: center
 			margin-bottom: 40px
+
 
 		span
 			color: $accent
@@ -899,8 +899,8 @@ h3
 			text-align: center
 			max-width: 100%
 
-		+r(320)
-			margin-bottom: 50px
+		+r(480)
+			margin-bottom: 40px
 			font-size: 18px
 
 	&__services
@@ -936,18 +936,27 @@ h3
 			+r(576)
 				width: 100px
 
+			+r(480)
+				width: 70px
+				margin-bottom: 15px
+
 		&--title
 			font-family: $titleFont
 			font-size: 24px
 			color: $accent
 			margin-bottom: 30px
 
+			+r(480)
+				margin-bottom: 15px
+				font-size: 20px
+
 		&--info
 			font-size: 16px
 			max-width: 300px
 
-			+r(320)
+			+r(480)
 				text-align: center
+				font-size: 14px
 
 	&__boards
 		position: absolute
@@ -1021,7 +1030,7 @@ h3
 		align-items: start
 		width: 820px
 
-		+r(768)
+		+r(992)
 			width: 100%
 
 		+r(480)
@@ -1074,7 +1083,7 @@ h3
 
 		&--image
 
-			+r(768)
+			+r(992)
 				display: none
 
 	&__price-block
@@ -1285,10 +1294,10 @@ h3
 			font-size: 30px
 
 		+r(480)
-			font-size: 26px
+			font-size: 24px
+			margin-bottom: 40px
 
 		+r(320)
-			margin-bottom: 40px
 			text-align: center
 
 	&__item
@@ -1320,11 +1329,14 @@ h3
 			width: 100%
 			margin-bottom: 52px
 
+			+r(480)
+				margin-bottom: 40px
+
 			label
 				font-size: 24px
 				color: #ffffff
 
-				+r(320)
+				+r(480)
 					font-size: 20px
 
 			input
@@ -1375,11 +1387,10 @@ h3
 			margin-bottom: 40px
 
 			+r(480)
-				font-size: 26px
+				font-size: 24px
 				margin-bottom: 20px
 
 			+r(320)
-				font-size: 22px
 				margin-bottom: 0
 				width: 100%
 
@@ -1577,7 +1588,7 @@ h3
 
 	&__form
 		z-index: 1
-		background-color: #fff
+		background-color: $bgColor
 		box-shadow: 0 0 16px rgba(0, 0, 0, 0.29)
 		width: 100%
 		max-width: 500px
@@ -1643,10 +1654,13 @@ h3
 		height: 40px
 		line-height: 40px
 		padding: 0 15px
+		border: 1px solid $accent
+		
 
 		&::placeholder
 			line-height: 40px
-			font-size: 16px
+			font-size: 12px
+			color: $accent
 
 		&:focus
 			box-shadow: 0 0 4px 0 rgba($text, 1)
@@ -1655,52 +1669,7 @@ h3
 			box-shadow: 0 0 4px 0 rgba(red, 1)
 			border-color: red
 
-	&__textarea
-		width: 100%
-		resize: none
-		min-height: 120px
-		padding: 15px
-
-		&._error
-			box-shadow: 0 0 4px 0 rgba(red, 1)
-			border-color: red
-
-	&__options
-
-		&_label
-			position: relative
-			display: inline-flex
-			font-size: 16px
-			line-height: 140%
-			align-items: center
-
-			&::before
-				content: ''
-				align-self: start
-				flex: 0 0 24px
-				height: 24px
-				background-color: $dark
-				border-radius: 50%
-				margin-right: 10px
-
-			&::after
-				content: ''
-				position: absolute
-				top: 4px
-				left: 4px
-				width: 16px
-				height: 16px
-				border-radius: 50%
-				background-color: #fff
-				transform: scale(0)
-				+transition
-
-		&_input
-			display: none
-
-			&:checked + .form__options_label::after
-				transform: scale(1)
-
+	
 	&__select
 		height: 50px
 		width: 100%
@@ -1708,85 +1677,11 @@ h3
 		font-size: 16px
 		padding: 0 15px
 
-	&__file
-
-		&_item
-			position: relative
-			margin-bottom: 10px
-
-		&_input
-			position: absolute
-			left: 0
-			top: 0
-			width: 100%
-			height: 100%
-			opacity: 0
-			font-size: 0
-
-		&_button
-			display: inline-flex
-			min-height: 40px
-			border-radius: 30px
-			justify-content: center
-			align-items: center
-			background-color: $dark
-			color: #fff
-			padding: 0 15px
-			cursor: pointer
-
-		&_preview
-			display: inline-block
-			max-width: 100px
-
-			img
-				max-width: 100%
-
-	&__checkbox
-		&._error
-			.form__checkbox_label::before
-				box-shadow: 0 0 7px 0 rgba(red, 1)
-
-		&_label
-			position: relative
-			width: 100%
-			font-size: 16px
-			line-height: 140%
-			display: inline-flex
-			align-items: center
-			cursor: pointer
-
-			&::before
-				content: ''
-				align-self: flex-start
-				flex: 0 0 24px
-				height: 24px
-				background-color: $dark
-				border-radius: 4px
-				margin-right: 10px
-				+transition
-
-			&::after
-				content: ''
-				width: 16px
-				height: 16px
-				position: absolute
-				top: 4px
-				left: 4px
-				background-color: #fff
-				transform: scale(0)
-				+transition
-
-			a
-				color: $text
-
-		&_input
-			display: none
-
-			&:checked + .form__checkbox_label::after
-				transform: scale(1)
-
 	&__btn
 		order: 1
+		display: flex
+		justify-content: center
+		align-items: center
 
 		&_button
 			@extend .btn
@@ -1816,42 +1711,61 @@ h3
 			border-right: 4px solid transparent
 			border-top: 4px solid transparent
 
-	&__nav
-
-		&_wrap
-			display: flex
-			flex-direction: column
-			margin-bottom: 20px
-
-		&_item
-			display: flex
-			margin-bottom: 10px
-
-		&_button
-			display: flex
-			flex-shrink: 0
-
-			a
-				display: flex
-				justify-content: center
-				align-items: center
-				width: 40px
-				height: 40px
-				border-radius: 50%
-				box-shadow: 0 0 5px 0 rgba(#000, .3)
-				padding: 0
-				margin-left: 10px
-
-			img
-				max-width: 50%
 
 //------------ Performered---------
 
 .performered
-	padding: 195px 0 195px 80px
+	padding-top: 195px
+	padding-bottom: 80px
 	background-color: #f7f5f5
+	position: relative
+
+	&__wrapper
+		margin-bottom: 50px
+
+	+r(1200)
+		padding-top: 145px
+
+	+r(992)
+		padding-left: 0
+	+r(576)
+		&_list
+			display: none
+
+	&-tabs
+		&__list
+			display: flex
+			flex-wrap: wrap
+			gap: 20px
+			margin-bottom: 50px
+			+r(480)
+				flex-direction: column
+				align-items: center
+				justify-content: center
+		&__item
+			text-transform: uppercase
+			color: $accent
+			padding: 20px
+			border: 2px solid $accent
+			cursor: pointer
+			+r(992)
+				padding: 10px
+
+			&:hover
+				background-color: $accent
+				color: #fff
+				+transition
+
+			&:focus
+				background-color: $accent
+
+
 
 	&__wrap
+		display: grid
+		grid-template-columns: 1fr 5fr 
+		+r(576)
+			grid-template-columns: 1fr 
 
 		h2
 			font-size: 60px
@@ -1863,31 +1777,7 @@ h3
 				font-size: 32px
 				text-align: center
 
-		ul
-			display: flex
-			flex-wrap: wrap
-			gap: 20px
-			margin-bottom: 50px
-			+r(480)
-				flex-direction: column
-				align-items: center
-				justify-content: center
-			li
-				text-transform: uppercase
-				color: $accent
-				padding: 20px
-				border: 2px solid $accent
-				cursor: pointer
-				+r(992)
-					padding: 10px
-
-				&:hover
-					background-color: $accent
-					color: #fff
-					+transition
-
-				&:focus
-					background-color: $accent
+		
 
 	&-tabs__wrap-item
 		width: 30%
@@ -1911,3 +1801,178 @@ h3
 		flex-wrap: wrap
 		justify-content: flex-start
 		gap: 30px
+
+	
+
+
+
+.leftbar
+	padding: 10px 0
+
+
+	&:last-child
+		margin-bottom: 0
+
+	&__header
+		+transition
+		display: flex
+		align-items: center
+		justify-content: space-between
+		cursor: pointer
+		font-weight: 700
+		p
+			font-size: 16px
+		+r(992)
+			p
+				font-size: 14px
+
+
+
+	&__content
+		+transition
+		overflow: hidden
+		color: #b5acac
+		padding-left: 20px
+		height: 0
+		position: relative
+		
+
+		li
+			font-size: 16px
+			color: $text
+			position: relative
+			&::before
+				position: absolute
+				content: ''
+				left: -20px
+				top: 11px
+				height: 1px
+				width: 10px
+				background-color: $text
+
+		+r(1200)
+			padding-left: 20px
+
+		+r(767)
+			padding-left: 10px
+
+	&--active
+
+		.leftbar
+			&__header
+				margin-bottom: 15px
+
+
+			&__content
+				opacity: 1
+
+
+
+//------------ Mounting---------
+.mounting
+	padding: 195px 0 90px 80px
+	background-color: #f7f5f5
+
+	&__wrap
+		display: grid
+		grid-template-columns: 1fr 5fr 
+		h2
+			margin-bottom: 35px
+		&-text
+			font-size: 22px
+			margin-bottom: 30px
+
+		&-container
+			display: grid
+			grid-template-columns: 1fr 1fr
+			gap: 50px
+
+			&--left
+				font-size: 18px
+				padding: 20px
+				color: $accent
+				border: 2px solid $accent
+				font-weight: 700
+
+			&--right
+				font-size: 18px
+
+
+.prices
+	background-color: #f7f5f5
+	&__wrap
+		display:grid
+		grid-column-start: 3
+		grid-template-columns: 1fr 
+
+
+	h3
+		margin-bottom: 30px
+
+	p
+		font-size: 22px
+		width: 81%
+		margin-bottom: 50px
+
+	&__content
+		display: grid
+		grid-template-columns: 1fr 1fr 1fr
+
+
+		&-img
+			width: 90%
+			border: 10px solid #fff
+			gap: 30px
+			img
+				width: 100%
+				height: auto
+
+
+.professional
+	padding-top: 100px
+	padding-bottom: 155px
+	background-color: #f7f5f5
+	+r(992)
+		padding-top: 70px
+		padding-bottom: 70px
+	h2
+		margin-bottom: 50px
+
+	&__services
+		display: grid
+		grid-template-columns: 1fr 1fr 1fr 1fr
+		gap: 30px
+		+r(1200)
+			gap: 30px
+		+r(767)
+			grid-template-columns: 1fr 1fr 1fr 
+		+r(576)
+			grid-template-columns: 1fr 1fr 
+		+r(480)
+			grid-template-columns: 1fr 
+
+	&__item
+
+		+r(576)
+			display: flex
+			justify-content: space-between
+			flex-direction: column
+			align-items: center
+			width: 100%
+
+		&--icon
+			margin-bottom: 30px
+
+			+r(576)
+
+
+		&--info
+			font-size: 20px
+			max-width: 300px
+			+r(1200)
+				font-size: 16px
+
+			+r(320)
+				text-align: center
+
+
