--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1832,22 +1832,34 @@
 	background-color: #f7f5f5
 	position: relative
 
-	&__wrapper
-		margin-bottom: 65px
-
 	+r(1200)
 		padding-top: 145px
 
 	+r(992)
 		padding-left: 0
 		padding-bottom: 90px
+	
+	+r(576)
+		padding-top: 100px
+		padding-bottom: 50px
+
+	+r(480)
+		padding-top: 70px
+
+	&_list
+		padding-right: 30px
+
+	&__wrapper
+		margin-bottom: 65px
+
+		+r(576)
+			margin-bottom: 30px
+
+	
 
 	+r(576)
 		&_list
 			display: none
-
-	+r(480)
-		padding-bottom: 50px
 
 	&-tabs
 		overflow: hidden
@@ -1858,7 +1870,11 @@
 			gap: 20px
 			margin-bottom: 50px
 
-			+r(480)
+			+r(768)
+				margin-bottom: 20px
+				gap: 10px
+
+			+r(576)
 				flex-direction: column
 				align-items: center
 				justify-content: center
@@ -1876,6 +1892,9 @@
 				max-width: 250px
 				width: 100%
 				text-align: center
+
+			+r(768)
+				font-size: 14px
 
 			&:hover
 				background-color: $accent
@@ -1915,14 +1934,22 @@
 			color: $text
 			padding-left: 10px
 
-			+r(992)
-				font-size: 20px
+			+r(1200)
+				font-size: 18px
+
+			+r(768)
+				font-size: 14px
 
 			+r(576)
-				font-size: 18px
+				font-size: 16px
 	&__img
 		border: 10px solid #fff
 		margin-bottom: 20px
+
+		+r(768)
+			border: 5px solid #fff
+			margin-bottom: 10px
+
 		img
 			width: 100%
 			height: auto
@@ -1933,6 +1960,14 @@
 		justify-content: flex-start
 		grid-column-gap: 30px
 		grid-row-gap: 60px
+
+		+r(1200)
+			grid-row-gap: 30px
+			grid-column-gap: 20px
+
+		+r(768)
+			grid-row-gap: 20px
+			grid-column-gap: 10px
 
 .leftbar
 	padding: 10px 0
@@ -2018,6 +2053,9 @@
 		top: 50%
 		right: 270px
 
+		+r(768)
+			right: 200px
+
 	&::after
 		display: block
 		content: ''
@@ -2027,9 +2065,15 @@
 		top: 50%
 		left: 270px
 
+		+r(768)
+			left: 200px
+
 	&--item
 		width: 190px
 		height: 60px
+
+		+r(768)
+			height: 50px
 
 		+r(480)
 			max-width: 80%
@@ -2043,21 +2087,73 @@
 	padding-bottom: 0
 	background-color: #f7f5f5
 
+	+r(1200)
+		padding-top: 90px
+
+	+r(768)
+		padding-top: 70px
+
+	+r(576)
+		padding-left: 0
+
+	&__right
+
+		+r(992)
+			max-width: 400px
+
+		+r(768)
+			max-width: 300px
+
+		+r(576)
+			width: 100%
+			max-width: 100%
+
+	&__title
+		margin-bottom: 35px
+		font-family: $titleFont
+
+		+r(992)
+			margin-bottom: 25px
+
+		+r(768)
+			font-size: 32px
+			margin-bottom: 10px	
+
+		+r(576)
+			text-align: center
+
 	&__list
 		padding-right: 30px
 		grid-row-start: 1
 		grid-row-end: 5
 
+		+r(576)
+			display: none
+
 	&__wrap
 		display: grid
 		grid-template-columns: 1fr 5fr
 
-		h2
-			margin-bottom: 35px
-			font-family: $titleFont
+		+r(576)
+			grid-template-columns: 1fr
+
+		
 		&-text
 			font-size: 22px
 			margin-bottom: 30px
+
+			+r(1200)
+				font-size: 18px
+			
+			+r(992)
+				font-size: 16px
+				margin-bottom: 20px
+
+			+r(768)
+				font-size: 14px
+
+			+r(576)
+				text-align: center
 
 		&-container
 			display: grid
@@ -2066,6 +2162,20 @@
 			margin-bottom: 100px
 			align-items: center
 
+			+r(992)
+				grid-template-columns: 1fr
+				margin-bottom: 30px
+				max-width: 400px
+				gap: 20px
+
+			+r(768)
+				gap: 15px
+				margin-bottom: 20px
+
+			+r(576)
+				width: 100%
+				max-width: 100%
+
 			&--left
 				font-size: 18px
 				padding: 30px
@@ -2073,34 +2183,91 @@
 				border: 2px solid $accent
 				font-weight: 700
 
+				+r(992)
+					font-size: 16px
+
+				+r(768)
+					font-size: 14px
+
+				+r(576)
+					width: 100%
+
+				+r(480)
+					text-align: center
+
 			&--right
 				font-size: 18px
 
+				+r(992)
+					font-size: 16px
+
+				+r(768)
+					font-size: 14px
+
+				+r(576)
+					text-align: center
+
 .prices
 	background-color: #f7f5f5
+
 	&__wrap
 		display: grid
 		grid-column-start: 3
 		grid-template-columns: 1fr
+		grid-gap: 30px
 
-	h3
+		+r(992)
+			grid-gap: 20px
+
+		+r(480)
+			max-width: 290px
+
+	&__title
 		margin-bottom: 30px
 		font-family: $titleFont
-		font-size: 40px
+
+		+r(992)
+			margin-bottom: 0
+
+		+r(768)
+			font-size: 24px
+		
+		+r(576)
+			text-align: center
 
 	p
 		font-size: 22px
 		width: 81%
-		margin-bottom: 50px
+
+		+r(1200)
+			font-size: 18px
+
+		+r(992)
+			font-size: 16px
+
+		+r(768)
+			font-size: 14px
+
+		+r(576)
+			text-align: center
+			width: 100%
 
 	&__content
 		display: grid
 		grid-template-columns: 1fr 1fr 1fr
 
+		+r(992)
+			grid-template-columns: 1fr 1fr 1fr
+			grid-gap: 10px
+
 		&-img
-			width: 90%
+			width: 100%
 			border: 10px solid #fff
 			gap: 30px
+
+			+r(992)
+				border: 5px solid #fff
+
 			img
 				width: 100%
 				height: auto
@@ -2111,11 +2278,24 @@
 	background-color: #f7f5f5
 
 	+r(992)
-		padding-top: 70px
+		padding-top: 30px
 		padding-bottom: 70px
-	h2
+
+	&_wrap
+			max-width: 290px
+	
+	&__title
 		margin-bottom: 50px
-		font-size: 40px
+
+		+r(992)
+			font-size: 30px
+			margin-bottom: 20px
+
+		+r(768)
+			font-size: 24px
+
+		+r(576)
+			text-align: center
 
 	&__services
 		display: grid
@@ -2123,12 +2303,17 @@
 		gap: 30px
 		+r(1200)
 			gap: 30px
-		+r(767)
+		+r(992)
 			grid-template-columns: 1fr 1fr 1fr
-		+r(576)
+		+r(768)
 			grid-template-columns: 1fr 1fr
+		+r(576)
+			grid-template-columns: 1fr 1fr 1fr
+			gap: 20px
+
 		+r(480)
-			grid-template-columns: 1fr
+			grid-template-columns: 1fr 1fr
+
 
 	&__item
 
@@ -2138,20 +2323,55 @@
 			flex-direction: column
 			align-items: center
 			width: 100%
+			justify-content: start
+
+		&:last-child
+
+			+r(992)
+				grid-column-start: 2
+				grid-column-end: 2
+
+			+r(768)
+				grid-column-start: 1
+				grid-column-end: 1
+
+			+r(576)
+				grid-column-start: 2
+				grid-column-end: 2
+				
+			+r(480)
+				grid-column-start: 1
+				grid-column-end: 1
 
 		&--icon
 			margin-bottom: 30px
 
+			+r(1440)
+				max-height: 60px 
+
+			+r(992)
+				max-height: 50px
+				margin-bottom: 20px
+
+			+r(768)
+				margin-bottom: 10px
+
 			+r(576)
+				max-height: 40px
 
 		&--info
 			font-size: 20px
 			max-width: 300px
-			+r(1200)
+
+			+r(1440)
 				font-size: 16px
 
-			+r(320)
+			+r(992)
+				font-size: 14px
+
+			+r(576)
 				text-align: center
+				font-size: 12px
 
 //-----------------------Cart---------------------
 
