--- a/sass/main.sass
+++ b/sass/main.sass
@@ -210,7 +210,7 @@
 
 	&__logo
 		display: block
-		width: 320px
+		width: 323px
 
 		+r(1440)
 			width: 250px
@@ -390,7 +390,7 @@
 	a
 		color: $text
 		font-family: $titleFont
-		font-size: 18px
+		font-size: 14px
 		display: flex
 		align-items: center
 		justify-content: center
@@ -1830,6 +1830,38 @@
 			border-left: 4px solid transparent
 			border-right: 4px solid transparent
 			border-top: 4px solid transparent
+//---------------Sidebar---------------
+.sidebar
+	position: sticky
+	top: 100px
+
+	&__list
+		width: 100%
+		display: flex
+		flex-direction: column
+		align-items: start
+		gap: 15px
+
+		+r(1200)
+			font-size: 14px
+
+		a 
+			&:hover
+				color: $accent
+
+	&__title
+		font-size: 16px
+		font-weight: bold
+		color: $text
+
+	&__link
+		color: $text
+		font-size: 16px
+		position: relative
+
+		span
+			color: #c6c5c5
+			margin-right: 10px
 
 //------------ Performered---------
 .performered
