--- a/sass/main.sass
+++ b/sass/main.sass
@@ -71,7 +71,6 @@
 
 // -----BUTTON-----
 .btn
-	width: 200px
 	color: $accent
 	height: 50px
 	border: 1px solid $accent
@@ -160,7 +159,7 @@
 
 			&::before,
 			&::after
-				background-color: #fff 
+				background-color: #fff
 
 		.hamburger__item
 			background-color: transparent
@@ -226,6 +225,7 @@
 			height: auto
 
 	&__button
+		width: 200px
 
 		+r(992)
 			height: 35px
@@ -831,7 +831,6 @@
 .swiper
 	&-container
 		width: 100%
-		height: 100%
 		position: relative
 		overflow: visible
 
@@ -867,11 +866,16 @@
 		flex-direction: column
 		border: 10px solid #ffffff
 		max-width: 410px
+		gap: 25px
+		text-align: left
 
 		+r(992)
 			gap: 15px
 
+		
+
 		img
+			object-fit: cover
 			width: 100%
 
 			+r(1200)
@@ -943,27 +947,41 @@
 		+r(768)
 			width: 150px
 
-		+r(576)
-			width: 100px
-
 		+r(480)
-			width: 70px
+			width: 90px
 			gap: 7px
 			bottom: 1px
+			right: 10px
+
+	&-button-prev,
+	&-button-next
+		width: 115px
+		height: 15px
+		border: none
+		background-color: transparent
+		display: flex
+		align-items: center
+		justify-content: center
+		opacity: 0.4
+
+		+r(992)
+			width: 80px
+
+		+r(768)
+			width: 70px
+
+		+r(480)
+			width: 50px
+
+
+		&:hover
+			opacity: 1
+			+transition
+
+	&-button-next
+		transform: scale(-1, 1) !important
 
 .slider-arrow
-
-	+r(992)
-		width: 80px
-
-	+r(768)
-		width: 70px
-
-	+r(576)
-		width: 40px
-
-	+r(320)
-		width: 30px
 
 //--------------------------------------------------------------
 
@@ -1846,7 +1864,7 @@
 		+r(1200)
 			font-size: 14px
 
-		a 
+		a
 			&:hover
 				color: $accent
 
@@ -1881,7 +1899,7 @@
 
 	+r(768)
 		padding-top: 80px !important
-	
+
 	+r(576)
 		padding-bottom: 50px !important
 
@@ -1894,9 +1912,8 @@
 	&__wrapper
 		margin-bottom: 65px
 
-
 		+r(576)
-			margin-bottom: 30px	
+			margin-bottom: 30px
 
 	+r(576)
 		&_list
@@ -2025,9 +2042,8 @@
 		+r(576)
 			grid-column-gap: 45px
 
-
-	padding: 10px 0
-	text-align: left
+	// padding: 10px 0
+		text-align: left
 
 	&:last-child
 		margin-bottom: 0
@@ -2169,7 +2185,7 @@
 
 		+r(768)
 			font-size: 32px
-			margin-bottom: 10px	
+			margin-bottom: 10px
 
 		+r(576)
 			text-align: center
@@ -2189,14 +2205,13 @@
 		+r(576)
 			grid-template-columns: 1fr
 
-		
 		&-text
 			font-size: 22px
 			margin-bottom: 30px
 
 			+r(1200)
 				font-size: 18px
-			
+
 			+r(992)
 				font-size: 16px
 				margin-bottom: 20px
@@ -2279,7 +2294,7 @@
 
 		+r(768)
 			font-size: 24px
-		
+
 		+r(576)
 			text-align: center
 
@@ -2364,7 +2379,6 @@
 		+r(480)
 			grid-template-columns: 1fr 1fr
 
-
 	&__item
 
 		+r(576)
@@ -2388,7 +2402,7 @@
 			+r(576)
 				grid-column-start: 2
 				grid-column-end: 2
-				
+
 			+r(480)
 				grid-column-start: 1
 				grid-column-end: 1
@@ -2397,7 +2411,7 @@
 			margin-bottom: 30px
 
 			+r(1440)
-				max-height: 60px 
+				max-height: 60px
 
 			+r(992)
 				max-height: 50px
@@ -2460,8 +2474,8 @@
 		+r(576)
 			display: none
 
-	padding: 10px 0
-	text-align: left
+	// padding: 10px 0
+		text-align: left
 
 	a
 		color: $text
@@ -3152,7 +3166,7 @@
 
 			+r(768)
 				text-align: left
-			
+
 			+r(576)
 				text-align: center
 
@@ -3269,4 +3283,539 @@
 
 			+r(576)
 				max-width: 50px
+
+//--------------contact/--------------
+
+.contact
+	padding-bottom: 40px !important
+
+	&_item
+		width: 100%
+		display: flex
+
+		+r(992)
+			flex-direction: column
+
+	&_wrap
+		margin-bottom: 30px
+		display: flex
+		flex-direction: column
+		+r(992)
+			margin-bottom: 15px
+		+r(480)
+			text-align: center
+
+	&_left
+		width: 40%
+
+		+r(992)
+			width: 100%
+
+		p
+			font-size: 16px
+			color: #7f7f7f
+			margin-bottom: 10px
+			padding-left: 0
+
+		a
+			font-size: 30px
+			color: $text
+
+			+r(992)
+				font-size: 24px
+
+		.mail
+			font-size: 24px
+
+			+r(992)
+				font-size: 18px
+
+		span
+			font-size: 20px
+			color: $text
+
+			+r(992)
+				font-size: 16px
+
+	&_right
+		width: 40%
+		+r(992)
+			width: 100%
+
+		p
+			font-size: 16px
+			color: #7f7f7f
+			margin-bottom: 10px
+			padding-left: 0
+			&:last-child
+				font-size: 18px
+
+		span
+			font-size: 18px
+			font-weight: 700
+			+r(992)
+				font-size: 16px
+
+.map
+	background-color: #f7f5f5
+	height: 500px
+
+	+r(767)
+		height: 450px
+
+	iframe
+		width: 100%
+		padding-bottom: 120px
+		+r(992)
+			padding-bottom: 50px
+
+//--------- action-------------//
+
+.action
+	background-color: #f7f5f5
+	padding-top: 60px
+
+	&_list
+		+r(767)
+			display: none
+
+	&__wrap
+		display: flex
+
+	&__right
+		padding-left: 35px
+		+r(767)
+			padding-left: 0
+
+	&__text
+		width: 90%
+
+		+r(992)
+			width: 100%
+
+		h1
+			margin-bottom: 20px
+
+			+r(767)
+				text-align: center
+
+		p
+			font-size: 22px
+			color: $text
+			margin-bottom: 60px
+
+		span
+			color: $accent
+
+	&__cart
+
+		h3
+			font-size: 40px
+			font-weight: 500
+			margin-bottom: 20px
+
+			+r(992)
+				font-size: 26px
+
+			+r(767)
+				text-align: center
+
+	&__item
+		background: #fff
+		padding: 60px
+		display: flex
+		justify-content: space-between
+		margin-bottom: 60px
+
+		+r(1200)
+			flex-direction: column-reverse
+			align-items: center
+
+		+r(767)
+			padding: 30px
+
+		span
+			font-size: 28px
+			font-weight: 700
+			color: $accent
+
+		p
+			font-size: 18px
+			margin-bottom: 20px
+
+		&-info
+			display: grid
+			grid-template-columns: 1fr 1fr
+			margin-bottom: 35px
+			+r(768)
+				grid-template-columns: 1fr
+
+		&-left
+
+			+r(767)
+				margin-bottom: 20px
+
+			p
+				font-size: 24px
+
+			span
+				font-size: 30px
+				color: $accent
+				font-weight: 700
+
+		&-right
+			p
+				font-size: 20px
+
+			span
+				font-size: 30px
+				color: $accent
+
+		&-phone
+			gap: 20px
+			display: grid
+			grid-template-columns: 1fr 1fr
+
+			+r(992)
+				display: flex
+				align-items: center
+				flex-direction: column
+
+			b
+				font-size: 14px
+				font-weight: 400
+
+	&-button
+		width: 300px
+		padding: 20px
+
+		+r(767)
+			width: auto
+
+	&__content
+		width: 60%
+
+		+r(1200)
+			width: 100%
+
+		+r(992)
+			text-align: center
+
+	&__image
+		width: 46%
+		display: flex
+		align-items: center
+		justify-content: center
+
+		img
+			height: 100%
+
+	.gift
+
+		p
+			font-size: 28px
+
+		&-info
+			grid-template-columns: 1fr 2fr 1fr
+			align-items: center
+
+			+r(767)
+				grid-template-columns: 1fr
+				gap: 10px
+				justify-content: center
+				display: flex
+				flex-direction: column
+
+			span
+				font-size: 24px
+
+//-------------Project------
+.project
+	background-color: $bgColor
+	padding-top: 95px
+	padding-bottom: 120px
+
+	+r(1440)
+		padding-top: 90px
+		padding-bottom: 50px
+
+	+r(768)
+		padding-top: 50px
+		padding-bottom: 50px
+
+	+r(576)
+		padding-top: 30px
+
+	&__wrapper
+		display: grid
+		grid-template-columns: 1fr 5fr
+		position: relative
+
+		+r(1200)
+			font-size: 45px
+
+		+r(767)
+			font-size: 32px
+			text-align: center
+
+		+r(576)
+			grid-template-columns: 1fr
+
+	&__list
+		padding-right: 30px
+		grid-row-start: 1
+		grid-row-end: 5
+
+		+r(576)
+			display: none
+
+	&__top
+		display: flex
+		flex-direction: column
+		width: 100%
+
+	&__title
+		font-size: 40px
+		font-family: $titleFont
+		margin-bottom: 40px
+		text-align: left
+
+		+r(1200)	
+			font-size: 36px
+
+		+r(992)
+			font-size: 32px
+			margin-bottom: 20px
+
+		+r(768)
+			font-size: 28px
+
+		+r(576)
+			text-align: center
+
+	&__info
+		display: flex
+		gap: 100px
+		padding: 30px 0
+		border-top: 1px solid #E4DCD4
+		border-bottom: 1px solid #E4DCD4
+		margin-bottom: 55px
+
+		+r(992)
+			gap: 50px
+			margin-bottom: 30px
+
+		+r(768)
+			gap: 20px
+
+		&_item
+			display: flex
+			flex-direction: column
+			text-align: left
+
+			+r(576)
+				text-align: center
+
+			span
+				font-size: 24px
+				word-wrap: normal
+
+				+r(1200)
+					font-size: 18px
+
+				+r(992)
+					font-size: 16px
+
+				+r(768)
+					font-size: 14px
+
+			p
+				+r(1200)
+					font-size: 14px
+				
+				+r(992)
+					font-size: 12px
+
+
+	&__slider
+		overflow: hidden
+		margin-bottom: 110px
+
+		+r(768)
+			margin-bottom: 50px
+
+		.swiper
+			&-container
+				padding: 0
+				display: flex
+
+				&::after
+					background: none
+
+			&-slide
+				height: 380px
+				max-width: 325px
+
+				+r(992)
+					height: 320px
+					max-width: 280px
+					border: 5px solid #fff
+
+				+r(768)
+					height: 260px
+					max-width: 220px
+					margin-right: 20px !important
+
+			&-pagination
+				width: 55%
+				z-index: 10
+				position: absolute
+
+		&--image
+			height: 100%
+			width: 100%
+
+	&__other-slider
+		overflow: hidden
+
+		&_top
+			+between
+			margin-bottom: 30px
+
+			+r(768)
+				flex-direction: column
+				align-items: flex-start
+				gap: 15px
+				margin-bottom: 20px
+
+			+r(576)
+				align-items: center
+
+		&_title
+			font-size: 40px
+			font-family: $titleFont
+
+			+r(1200)
+				font-size: 36px
+
+			+r(992)
+				font-size: 32px
+
+			+r(768)
+				font-size: 28px
+
+			+r(576)
+				text-align: center
+
+		&_button
+			min-width: 260px
+			height: 60px
+
+			+r(1200)
+				font-size: 14px
+
+			+r(992)
+				min-width: 200px
+				height: 50px
+				font-size: 12px
+
+
+		.swiper
+			&-container
+				padding: 0
+
+				&::after
+					background: none
+
+			&-wrapper
+				margin-bottom: 0
+				display: flex
+				flex-direction: row
+				align-items: baseline
+				height: auto
+				margin-bottom: 60px
+
+				+r(768)
+					margin-bottom: 30px
+
+			&-slide
+				max-height: 460px
+				max-width: 325px
+				justify-content: flex-end
+				border: none
+				background-color: transparent
+				text-align: left
+
+				+r(992)
+					height: 340px
+					max-width: 280px
+					text-align: center
+
+				+r(768)
+					height: 300px
+					max-width: 220px
+					margin-right: 20px !important
+
+				img
+					border: 10px solid #fff
+
+					+r(992)
+						border: 5px solid #fff
+
+				a
+					+r(768)
+						font-size: 14px
+
+			&-pagination
+				width: 55%
+				z-index: 10
+
+		&--image
+			height: 100%
+			width: 100%
+			
+//----------------Breadcrumbs-----------
+.breadcrumbs
+	position: absolute
+	margin: 0 auto
+	top: -70px
+	left: 15px
+	+between
+
+	+r(1200)
+		top: -55px
+
+	+r(768)
+		top: -40px
+
+	+r(576)
+		display: none
+
+	li 
+		font-size: 14px
+
+		+r(992)
+			font-size: 12px
+
+		+r(576)
+			font-size: 10px
+
+		&::after
+			content: '/'
+			margin: 0 10px
+
+			+r(992)
+				margin: 0 5px
+
+		&:last-child
+			&::after
+				content: ''
+
+	&__link
+		color: #8a8a8a
+		text-decoration: underline
+
+		&--active
+			color: #8a8a8a
+			text-decoration: none
 
